deleteTask() transfer to SQL
