# handler.go
@@ -72,6 +72,27 @@ func postTask(c *gin.Context) {
 func putTasks(c *gin.Context) {
 }
 
-// TODO: Implement deleteTask
+// deleteTask godoc
+// @Summary deleteTask
+// @Description Deletes tast at specified ID
+// @Tags root
+// @Param id path int true "The specified ID"
+// @Accept */*
+// @Produce json
+// @Router /tasks/{id} [DELETE]
 func deleteTask(c *gin.Context) {
+	id, err := strconv.Atoi(c.Param("id"))
+	if err != nil {
+		c.IndentedJSON(http.StatusBadRequest, err)
+		return
+	}
+
+	rowsAffected, err := deleteTask_sql(id)
+	if err != nil {
+		c.IndentedJSON(http.StatusNotFound, err)
+		return
+	}
+
+	message := strconv.Itoa(int(rowsAffected)) + " task deleted"
+	c.IndentedJSON(http.StatusOK, message)
 }
